--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -43,5 +43,14 @@
 		<filter-name>characterEncodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/views/interceptor/error404Page.jsp</location>
+	</error-page>
+	
+	<error-page>
+	    <location>/WEB-INF/views/interceptor/error500Page.jsp</location>
+	</error-page>	
 
 </web-app>
